--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -10,7 +10,7 @@
     <body>
         <div class="main-content">
             {{>header}}
-        
+            <p>This site was created by Mustafa. It accesses data from mapbox.com and openweathermap.org</p>
             <img class="portrait" src="/img/me.jpg">
         </div>
         
